@@ -26,6 +26,7 @@
  - fixed bug in permissionHandler (goffy)
  - fixed bug with ..._LIST (mjoel/goffy)
  - fixed bug in test data (mjoel/goffy)
+ - added clone feature (mjoel/goffy)
 
 <h5>3.04 Final   [2020-11-11]</h5>  Dev: XOOPS 2.5.11, PHP 7.4.5
 <hr>
